hphp/hack/test/typecheck/functional_dots.php.like_types.exp
File "functional_dots.php", line 18, characters 5-85:
Invalid argument (Typing[4110])
File "functional_dots.php", line 12, characters 12-44:
Expected ~(function(int, mixed...): string) because it is an unenforceable type
File "functional_dots.php", line 18, characters 5-85:
But got (function(int $x, mixed $args...): string)
